# edger

./: LICENSE  README.md  linux_install.sh  win_install.bat
aardvark/: .env  .eslintrc.js  .gitignore  .gitpod.yml  .npmrc  Jenkinsfile  README.md  babel.config.js  jest.config.js  jsconfig.json  linux_install.sh  package-lock.json  package.json  pnpm-lock.yaml  stylelint.config.js  vue.config.js
aardvark/public/: index.html
aardvark/src/: App.vue  bootstrap.js  main.js
aardvark/tests/: setup.js
ant/: .gitignore  CMakeLists.txt  linux_install.sh  oldsdkconfig  oldsdkconfig.old  partitions_example.csv  sdkconfig  sdkconfig.old
ant/main/: CMakeLists.txt  Kconfig.projbuild  buildMenu.c  edger_main.c  edger_main.h  esp_rest_main.c  rest_server.c  rest_server.h  utilities.c  utilities.h
ant/main/ADT7420/: ADT7420.c  ADT7420.h
ant/main/BMP3XX/: BMP3XX.c  BMP3XX.h
ant/main/SPI/: CMakeLists.txt
ant/main/configuration/: configuration.c  configuration.h  system_info.c  system_info.h
ant/main/console/: console_main.c
ant/main/gpio/: gpio.c  gpio.h  gpioDriver.c  gpioDriver.h
ant/main/hsppad143a/: hsppad143a.c
ant/main/i2c/: i2c.c  i2c.h  i2cDriver.c  i2cDriver.h
api/: README.md
api/cli/: README.md
api/gui/: README.md
doc/: EdgerUserManual.html  EdgerUserManual.odt  README.md  faq.md
doc/CAD/: BLINKY.aap  README.md
doc/DialogDesigns/: greenpack-test1.aap
doc/doc/: README.md
doc/presentations/: 20220831-InstallSteps.odp
doc/pullrequestprocess/: README.md
hardware/: README.md
hardware/doc/: README.md
tests/: README.md
tools/: README.md
(+206 files in other folders)
